<resources>
    <string name="app_name">Mandalajati Care</string>

    <!-- String related to About -->
    <string name="selamat_datang">Selamat Datang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="no_handphone">No Handphone</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_sekarang">Login Sekarang</string>
    <string name="email">Email</string>
    <string name="loading">This is empty view</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="reset">Reset Password</string>
    <string name="masukkan_email_terdaftar_anda">Masukkan Email Terdaftar</string>
    <string name="lupa_password_anda">Lupa Password Anda ?</string>
    <string name="instruksi">Silakan Konfirmasi Email Anda Lalu Kami Akan Memberikan Instruksi Selanjutnya</string>
    <string name="instruksipetugas">Form Login Khusus Petugas, Masyarakat Biasa Silakan Login Melalui Form Login di Awal...</string>


    <string name="dashboard">Dashboard</string>
    <string name="updatelaporan">Update Laporan</string>
    <string name="title_activity_dashboard_petugas">Map</string>

    <string name="tentang1">Mandalajati Care adalah aplikasi yang</string>
    <string name="tentang2">dapat digunakan masyarakat khususnya masyarakat</string>
    <string name="tentang3">Kecamatan Mandalajati Kota Bandung</string>
    <string name="tentang4">untuk dapat melaporkan masalah atau peristiwa terkait</string>
    <string name="tentang5">lingkungan secara langsung ke kantor terkait,</string>
    <string name="tentang6">aplikasi ini akan langsung terhubung dengan google maps</string>
    <string name="tentang7">berdasarkan titik kordinat pelapor.</string>
    <string name="tentang8">Ayo kita wujudkan wilayah yang bersih, asri, dan nyaman.</string>
</resources>
