<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Tentang">

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_kecamatan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/basic_regular"
        android:text="MANDALAJATI CARE"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <TextView
        android:id="@+id/tvAppVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/basic_regular"
        android:text="App Version"
        android:textColor="@color/blueLight"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tentang1"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang1"
        android:textSize="15sp"
        android:textColor="@color/nliveo_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppVer" />

    <TextView
        android:textSize="15sp"
        android:layout_marginTop="@dimen/_4sdp"
        android:id="@+id/tentang2"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang2"
        android:textColor="@color/nliveo_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tentang1" />

    <TextView
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="15sp"
        android:id="@+id/tentang3"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang3"
        android:textColor="@color/nliveo_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tentang2" />

    <TextView
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="15sp"
        android:id="@+id/tentang4"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang4"
        android:textColor="@color/nliveo_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tentang3" />

    <TextView
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="15sp"
        android:id="@+id/tentang5"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang5"
        android:textColor="@color/nliveo_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tentang4" />

    <TextView
        android:textSize="15sp"
        android:id="@+id/tentang6"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang6"
        android:textColor="@color/nliveo_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tentang5" />

    <TextView
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="15sp"
        android:id="@+id/tentang7"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang7"
        android:textColor="@color/nliveo_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tentang6" />

    <TextView
        android:textSize="15sp"
        android:id="@+id/tentang8"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/basic_regular"
        android:text="@string/tentang8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tentang7" />

</android.support.constraint.ConstraintLayout>